<resources>
    <string name="action_settings">Settings</string>
    <string name="account_qr_refreshtip">二维码每30秒会刷新一次（%s）</string>
    <string name="close">关闭</string>
    <string name="warning">提示</string>
    <string name="delete">删除</string>
    <string name="error">错误</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="share_save_image">保存图片</string>
    <string name="share_wechat_friend">微信好友</string>
    <string name="share_wechat_circle">微信朋友圈</string>
    <string name="login_bar_login">登录</string>
    <string name="login_bar_registe">注册</string>
    <string name="login_bar_next">下一步</string>
    <string name="login_account">账号: </string>
    <string name="login_mobile">手机号: </string>
    <string name="login_weixin">微信号: </string>
    <string name="login_weixin_hint">请输入微信号 </string>
    <string name="login_mobile_hint">请输入手机号</string>
    <string name="login_account_hin">请输入手机号/账号</string>
    <string name="login_account_hint">请输入账号</string>
    <string name="login_password">密码: </string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_wx_login">点击微信直接登录</string>
    <string name="login_error_acc_notnull">账号不能为空！</string>
    <string name="login_error_psd_notnull">密码不能为空！</string>
    <string name="login_error_psd_more_5">密码不能少于5位！</string>
    <string name="login_error_nick_notnull">昵称不能为空！</string>
    <string name="login_error_weixin_notnull">微信号不能为空！</string>
    <string name="login_error_email_notnull">邮箱不能为空！</string>
    <string name="login_error_phone_notnull">手机号不能为空！</string>
    <string name="login_error_code_notnull">验证码不能为空！</string>
    <string name="login_error_confirm_notnull">确认密码不能为空！</string>
    <string name="login_error_psd_confirm">登录密码和确认密码不相同</string>
    <string name="register_phone">手机号</string>
    <string name="register_account">账号</string>
    <string name="register_nick">昵称</string>
    <string name="register_weixin_account">微信账号</string>
    <string name="register_email">邮箱</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_nick_hint">请输入昵称,只能是汉字、字母和数字</string>
    <string name="register_account_hint">请输入账号</string>
    <string name="register_weixin_account_hint">请输入微信账号</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="register_code">验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_password">登录密码</string>
    <string name="register_password_hint">请输入登录密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_confirm_password_hint">请输入确认密码</string>
    <string name="register_hint">温馨提示：\n你注册成功后，随便更改即可</string>
    <string name="register_complete">完成</string>
    <string name="set_pay_password_hint">请您设置六位数字的泡泡社交支付密码，设置支付密码后发红包、转账更安全。</string>
    <string name="login_pay_password_hint">请输入支付密码</string>
    <string name="set_pay_password_title">设置支付密码</string>
    <string name="main_title">大厅首页</string>
    <string name="main_search">搜索</string>
    <string name="main_explain">说明</string>
    <string name="main_dating">大厅</string>
    <string name="main_chart">聊天</string>
    <string name="main_msg">消息</string>
    <string name="main_find">发现</string>
    <string name="main_my">我</string>
    <string name="main_notice">官方通知</string>
    <string name="main_online_answer">在线客服</string>
    <string name="notice_title">通知</string>
    <string name="notice_item_title">新版本2.0</string>
    <string name="notice_item_time">2017-11-22 15:16</string>
    <string name="notice_item_content">大家更新最新版本</string>
    <string name="notice_item_content_detail">www.05173.net</string>
    <string name="service_title">在线客服</string>
    <string name="service_item_role">群主</string>
    <string name="service_item_content">管家（离线、晚上10点下分）</string>
    <string name="explain_title_top">说明</string>
    <string name="explain_title_find">发现</string>
    <string name="explain_title">关于我们</string>
    <string name="explain_detail">\t\t大家知道微信氨基酸打开就发啦涉及到看风景阿拉斯加的看法建设路口打飞机卡接收到积分卡时间段疯狂就爱看时间段发神经的法兰克。
            \n      \t\t微友社交提升的女爱好via是的。
            \n      \t\t四六级的咖啡机阿拉斯加的罚款圣诞节。
            </string>
    <string name="chart_red_explain">扫雷红包游戏</string>
    <string name="chart_red_count">25-5</string>
    <string name="chart_red_take">领取红包</string>
    <string name="chart_sys">某某加入了该群</string>
    <string name="chart_delete_dialog_message">是否清空所有聊天记录？</string>
    <string name="chart_quit_group">是否退出本群？</string>
    <string name="chart_photo">选择拍照</string>
    <string name="chart_pic">选择图片</string>
    <string name="chart_red">红包</string>
    <string name="chart_contact_admin">联系群主</string>
    <string name="chart_get_pay">赚取佣金</string>
    <string name="chart_bill">账单</string>
    <string name="chart_recharge">充值</string>
    <string name="chart_recharge_paopao">泡泡红包</string>
    <string name="chart_transfer">转账</string>
    <string name="chart_cash">兑换</string>
    <string name="chart_service">在线客服</string>
    <string name="red_detail_title">红包详情</string>
    <string name="red_detail_name">白富美的红包</string>
    <string name="red_detail_count">36.99-9</string>
    <string name="red_detail_hit">未领取的红包，将于3分钟后发起退款</string>
    <string name="my_title">我</string>
    <string name="my_fen">总积分</string>
    <string name="my_account">泡泡ID</string>
    <string name="my_code">推荐码</string>
    <string name="my_money">我要赚钱</string>
    <string name="my_player">我的玩家</string>
    <string name="my_set">设置</string>
    <string name="my_version">版本</string>
    <string name="my_quit">退出</string>
    <string name="my_base_title">个人资料</string>
    <string name="my_base_head">头像</string>
    <string name="my_base_nick">昵称</string>
    <string name="my_base_account">账号</string>
    <string name="my_base_sex">性别</string>
    <string name="my_base_sign">个人签名</string>
    <string name="my_base_photo">拍照</string>
    <string name="my_base_pic">图片</string>
    <string name="my_base_man">男</string>
    <string name="my_base_women">女</string>
    <string name="edit_title">保存</string>
    <string name="edit_title_in_sign">请输入个人签名</string>
    <string name="edit_title_in_nick">请输入昵称</string>
    <string name="money_title">我的赚钱</string>
    <string name="money_share_to">分享到：</string>
    <string name="money_share_friend">微信好友</string>
    <string name="money_save_phone">保存到手机</string>
    <string name="money_share_circle">朋友圈</string>
    <string name="player_title">我的玩家</string>
    <string name="set_title">设置</string>
    <string name="set_account">账号</string>
    <string name="set_phone">手机号</string>
    <string name="set_password">密码设置</string>
    <string name="set_password_title">设置密码</string>
    <string name="set_password_login">登录密码</string>
    <string name="set_password_pay">支付密码</string>
    <string name="set_password_find">找回支付密码</string>
    <string name="set_password_message">为保障您的数据安全，修改密\n码前请填写前密码</string>
    <string name="sys_notice_title">系统消息通知</string>
    <string name="recharge_tip1">1:保存的二维码只能用一次，不能反复使用。</string>
    <string name="recharge_tip2">2:二维码保存后30秒不使用会失效，必须重新保存。</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_detail_title">微信支付</string>
    <string name="pay_detail_alipay_title">支付宝支付</string>
    <string name="pay_detail_money">应付金额</string>
    <string name="trans_detail_title">交易详情</string>
    <string name="trans_detail_money">付款金额</string>
    <string name="trans_detail_turn">说明</string>
    <string name="trans_detail_state">当前状态</string>
    <string name="trans_detail_time">交易时间</string>
    <string name="group_info_member">全部群成员</string>
    <string name="group_info_name">群聊名称</string>
    <string name="group_info_code">群二维码</string>
    <string name="group_info_notice">群公告</string>
    <string name="group_info_know">须知</string>
    <string name="group_info_rule">奖励规则</string>
    <string name="my_detail_zong">总资产</string>
    <string name="my_detail_freeze">冻结积分</string>
    <string name="my_detail_start">开始时间</string>
    <string name="my_detail_end">结束时间</string>
    <string name="my_detail_sum">累计</string>
    <string name="my_detail_class">选择分类</string>
    <string name="my_detail_bill">账单记录</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="input_payment_password">请输入支付密码</string>
    <string name="eml_point">●</string>
    <string name="rmb_symbol">¥</string>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="withdrawn_msg">撤 回</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="pic_and_video">图片和视频</string>
    <string name="black_list_send_tip">消息已发送，但对方拒收</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
</resources>