<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_small">
        <TextView
            android:id="@+id/notice_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_item_title"
            android:textSize="@dimen/text_content_or_button"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/notice_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_item_time"
            android:textSize="@dimen/text_content_or_button"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/notice_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_small"
        android:layout_marginRight="@dimen/distance_small"
        android:text="@string/notice_item_content"
        android:textSize="@dimen/text_content_or_button"/>
    <TextView
        android:id="@+id/notice_item_content_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_small"
        android:layout_marginRight="@dimen/distance_small"
        android:text="@string/notice_item_content_detail"
        android:textSize="@dimen/text_content_or_button"/>
</LinearLayout>
