<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/distance_bigger"
        android:padding="@dimen/distance_normal">
        <TextView
            android:id="@+id/login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/login_phone"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_phone_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
    </RelativeLayout>
    <include android:layout_marginLeft="@dimen/distance_normal"
        android:layout_marginRight="@dimen/distance_normal"
        layout="@layout/include_divider"
        tools:ignore="IncludeLayoutParam"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/distance_normal">
        <TextView
            android:id="@+id/register_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_code"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/register_code_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/register_code"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_code_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
        <TextView
            android:id="@+id/register_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/distance_smaller"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_get_code"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_normal_bg"
            android:textSize="@dimen/text_content_or_button"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/distance_middle"
        android:padding="@dimen/distance_normal">
        <TextView
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/register_password_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/register_password"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_password_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
    </RelativeLayout>
    <include android:layout_marginLeft="@dimen/distance_normal"
    android:layout_marginRight="@dimen/distance_normal"
    layout="@layout/include_divider"
    tools:ignore="IncludeLayoutParam"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/distance_normal">
        <TextView
            android:id="@+id/register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_confirm_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/register_confirm_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/register_confirm"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_confirm_password_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_normal"
        android:layout_marginLeft="@dimen/distance_bigger"
        android:layout_marginRight="@dimen/distance_bigger"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/register_hint"/>
    <TextView
        android:id="@+id/register_errror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_middle"
        android:layout_marginLeft="@dimen/distance_bigger"
        android:layout_marginRight="@dimen/distance_bigger"

        android:textColor="@color/pure_red"/>

    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_normal"
        android:layout_marginTop="@dimen/distance_bigger"
        android:textSize="@dimen/text_content_or_button"
        android:text="@string/register_complete"
        android:background="@drawable/selector_normal_bg"
        android:textColor="@color/white"
        />
</LinearLayout>
