<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/share_wechat_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/normal_small_margin"
            android:drawableTop="@drawable/shape_share_wechat_friend"
            android:gravity="center"
            android:text="@string/share_wechat_friend"
            android:textColor="@color/text_normal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/share_wechat_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/normal_small_margin"
            android:drawableTop="@drawable/shape_share_wechat_circle"
            android:gravity="center"
            android:text="@string/share_wechat_circle"
            android:textColor="@color/text_normal"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/share_save_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/normal_small_margin"
            android:drawableTop="@drawable/shape_share_save_img"
            android:gravity="center"
            android:text="@string/share_save_image"
            android:textColor="@color/text_normal"
            android:textSize="12sp" />
    </LinearLayout>
    <include layout="@layout/include_divider"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_deep"
        android:textSize="18sp" />

</LinearLayout>