<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/distance_bigger"
        android:padding="@dimen/distance_normal"
        >
        <TextView
            android:id="@+id/login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/verify_phone_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/login_phone"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_phone_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/distance_normal">
        <TextView
            android:id="@+id/register_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_code"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/verify_code_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/register_code"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/register_code_hint"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
        <TextView
            android:id="@+id/verify_get_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/distance_smaller"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/register_get_code"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_normal_bg"
            android:textSize="@dimen/text_content_or_button"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
</LinearLayout>
