<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.similarwx.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_app_bar"
        android:background="@color/actionbar_green">
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/distance_smaller"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/login_bar_login"
            android:textSize="@dimen/text_appbar"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/distance_smaller"
            android:layout_marginRight="@dimen/distance_normal"
            android:text="@string/login_bar_registe"
            android:textSize="@dimen/text_appbar"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_bigger"
        android:layout_marginLeft="@dimen/distance_small"
        android:layout_marginRight="@dimen/distance_small"
        android:padding="@dimen/distance_small">
        <TextView
            android:id="@+id/login_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/login_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/login_account_tv"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/login_account_hin"
            android:text="paopaotest1"
            android:inputType="text"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:lines="1"
            />
    </RelativeLayout>
    <include android:layout_marginLeft="@dimen/distance_normal"
        android:layout_marginRight="@dimen/distance_normal"
        layout="@layout/segmentation_line"
        tools:ignore="IncludeLayoutParam"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_big"
        android:layout_marginLeft="@dimen/distance_small"
        android:layout_marginRight="@dimen/distance_small"
        android:padding="@dimen/distance_small">
        <TextView
            android:id="@+id/login_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/login_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_or_button"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_middle"
            android:layout_toRightOf="@id/login_password_tv"
            android:background="@null"
            android:textSize="@dimen/text_content_or_button"
            android:hint="@string/login_password_hint"
            android:password="true"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:lines="1"
            />
    </RelativeLayout>
    <include
        layout="@layout/segmentation_line" />
    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/distance_normal"
        android:textColor="@color/pure_red"
        android:layout_margin="@dimen/distance_small"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_normal"
        android:layout_marginTop="@dimen/distance_normal"
        android:textSize="@dimen/text_content_or_button"
        android:text="@string/login_bar_login"
        android:background="@drawable/selector_normal_bg"
        android:textColor="@color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_middle"
        android:layout_marginLeft="@dimen/distance_small"
        android:layout_marginRight="@dimen/distance_small"
        android:padding="@dimen/distance_small">
        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_tip"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_normal">
        <ImageView
            android:id="@+id/login_wx_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/weixin"/>
        <TextView
            android:layout_marginTop="@dimen/distance_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_wx_iv"
            android:text="@string/login_wx_login"
            android:textSize="@dimen/text_content_or_button"/>
    </RelativeLayout>
</LinearLayout>
